intTests/test_parse_errors/lexer003.log.good
 Loading file "lexer003.saw"
 Parse error at lexer003.saw:9:20-9:22: Unexpected `*/'
FAILED
